# hyprsunrisewatcher

./: Cargo.toml  README.md  config.toml
src/: actions.rs  config.rs  context.rs  daemon.rs  error.rs  info.rs  main.rs  scheduler.rs  state.rs
src/abstraction/: actions.rs  config.rs  daemon.rs  mod.rs  scheduler.rs
src/error/: mod.rs
src/platform/: mod.rs
src/platform/unix/: mod.rs
